src/docs/asciidoc/v1/intro.adoc
[[Introduction]]
== Introduction

`springdoc-openapi` java library helps to automate the generation of API documentation using spring boot projects.
`springdoc-openapi` works by examining an application at runtime to infer API semantics based on spring configurations, class structure and various annotations.

Automatically generates documentation in JSON/YAML and HTML format APIs.
This documentation can be completed by comments using swagger-api annotations.

This library supports:

*  OpenAPI 3
*  Spring-boot (v1, v2 and v3)
*  JSR-303, specifically for @NotNull, @Min, @Max, and @Size.
*  Swagger-ui
*  OAuth 2
*  GraalVM native images

The following video introduces the Library:

[link=https://youtu.be/utRxyPfFlDw,window=_blank]
image::img/springdoc-openapi-prez.gif[spring.io conference]


This is a community-based project, not maintained by the Spring Framework Contributors (Pivotal).

++++
        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8127371937306964"
             crossorigin="anonymous"></script>
        <!-- HEADER2 -->
        <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-8127371937306964"
             data-ad-slot="2654893709"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
        <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
        </script>
++++