src/docs/asciidoc/v2/intro.adoc
ifndef::springdoc-aggregate[]
= Introduction to springdoc-openapi (v2)
:toc: left
:toclevels: 3
:sectanchors:
:icons: font
:hide-uri-scheme:
:docinfodir: v2

IMPORTANT: You are reading the documentation for *springdoc-openapi v2* (Spring Boot 3.x). See the https://springdoc.org[current springdoc-openapi documentation] for the latest release.
endif::[]

[[Introduction]]
== Introduction


`springdoc-openapi` java library helps to automate the generation of API documentation using spring boot projects.
`springdoc-openapi` works by examining an application at runtime to infer API semantics based on spring configurations, class structure and various annotations.

Automatically generates documentation in JSON/YAML and HTML format APIs.
This documentation can be completed by comments using swagger-api annotations.

This library supports:

*  OpenAPI 3
*  Spring-boot v3 (Java 17 & Jakarta EE 9)
*  JSR-303, specifically for @NotNull, @Min, @Max, and @Size.
*  Swagger-ui
*  Scalar
*  OAuth 2
*  GraalVM native images

The following video introduces the Library:


[link=https://youtu.be/ondlnm5ZoFM?t=9,window=_blank]
image::img/spring-io-24.webp[springdoc-openapi talk at the Spring I/O 2024 conference,1200,632]


This is a community-based project, not maintained by the Spring Framework Contributors (Pivotal).

